--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <nav role="navigation" aria-label="Main Navigation">
-        <div class="left">
-            <img src="pic/img04.png" alt="Logo" width="120px" loading="lazy">
+ <nav role="navigation" aria-label="Main Navigation">
+    <div class="left">
+        <img src="pic/img04.png" alt="Logo" width="120px" loading="lazy">
+    </div>
+    <div class="right">
+        <div class="toggle-menu" onclick="toggleMenu()">
+            <i class="fa-solid fa-bars"></i>
         </div>
-        <div class="right">
-            <div class="toggle-menu" onclick="toggleMenu()">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-            <ul id="nav-links" aria-hidden="true">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PAGES</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">SHOP</a></li>
-                <li><a href="#">ELEMENTS</a></li>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-            </ul>
-        </div>
-    </nav>
-  
+        <ul id="nav-links" aria-hidden="true">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">PAGES</a></li>
+            <li><a href="#">PORTFOLIO</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">SHOP</a></li>
+            <li><a href="#">ELEMENTS</a></li>
+            <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+            <li><a href="MyForm.html"><i class="fa-solid fa-user"></i> SIGN IN</a></li> 
+        </ul>
+    </div>
+</nav>
     <main>
         <img src="pic/img12.jpg" class="mySlides" loading="lazy">
         <img src="pic/img15.jpg" class="mySlides" loading="lazy">
@@ -254,11 +254,11 @@
             <div class="inner4">
                 <h4>Follow Our Instagram</h4>
                 <div class="photos">
-                    <div><img src="pic/img26.jpg" alt="Instagram Photo 1"></div>
-                    <div><img src="pic/img27.jpg" alt="Instagram Photo 2"></div>
-                    <div><img src="pic/img28.jpg" alt="Instagram Photo 3"></div>
-                    <div><img src="pic/img31.jpg" alt="Instagram Photo 4"></div>
-                    <div><img src="pic/img30.jpg" alt="Instagram Photo 5"></div>
+                    <div><a href="#" ><img src="pic/img26.jpg" alt="Instagram Photo 1"></a></div>
+                    <div><a href="#"><img src="pic/img27.jpg" alt="Instagram Photo 2"></a></div>
+                    <div><a href="#"><img src="pic/img28.jpg" alt="Instagram Photo 3"></a></div>
+                    <div><a href="#"><img src="pic/img31.jpg" alt="Instagram Photo 4"></a></div>
+                    <div><a href="#"><img src="pic/img30.jpg" alt="Instagram Photo 5"></a></div>
  <div><img src="pic/img29.jpg" alt="Instagram Photo 6"></div>
                 </div>
             </div>
