--- a/MyForm.html
+++ b/MyForm.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <div class="form-box login">
-            <form action="">
+            <form action="index.html">
                 <h1>Login</h1>
                 <div class="input-box">
                     <input type="text" placeholder="Username" required>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-box register">
-            <form action="">
+            <form action="index.html">
                 <h1>Registration</h1>
                 <div class="input-box">
                     <input type="text" placeholder="Username" required>
