--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#">SHOP</a></li>
             <li><a href="#">ELEMENTS</a></li>
             <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-            <li><a href="MyForm.html"><i class="fa-solid fa-user"></i> SIGN IN</a></li> 
+            <li><a href="MyForm.html"><i class="fa-solid fa-user"></i></a></li> 
         </ul>
     </div>
 </nav>
