--- a/MyForm.html
+++ b/MyForm.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="form.css">
 </head>
 <body>
-    
     <div class="container">
         <div class="form-box login">
             <form action="index.html">
@@ -33,7 +32,6 @@
                     <a href="#"><i class="bx bxl-linkedin"></i></a>
                 </div>
             </form>
-
         </div>
 
         <div class="form-box register">
@@ -60,7 +58,6 @@
                     <a href="#"><i class="bx bxl-linkedin"></i></a>
                 </div>
             </form>
-
         </div>
 
         <div class="toggle-box">
@@ -76,12 +73,7 @@
             </div>
         </div>
     </div>
-    
 
-
-
-
-
-   <script src="index.js"></script>
+    <script src="form.js"></script>
 </body>
 </html>
