--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div><a href="#"><img src="pic/img28.jpg" alt="Instagram Photo 3"></a></div>
                     <div><a href="#"><img src="pic/img31.jpg" alt="Instagram Photo 4"></a></div>
                     <div><a href="#"><img src="pic/img30.jpg" alt="Instagram Photo 5"></a></div>
- <div><img src="pic/img29.jpg" alt="Instagram Photo 6"></div>
+                    <div><a href="#"><img src="pic/img29.jpg" alt="Instagram Photo 6"></a></div>
                 </div>
             </div>
         </div>
